# Manhua-Video-Maker

./: .gitattributes  .replit  pnpm-lock.yaml  pyproject.toml  replit.md  replit.nix  requirements.txt
app/: auth.py  buffer_api.py  config.py  context.py  main.py  memory.py  ocr.py  panels.py  scraper.py  script.py  settings.json  tts.py  video.py
app/jobs/: 0415e21b-2a17-42fd-8cfd-586dbf06068f.json  21fbf6b7-bc1f-4ddd-864b-4daec6e206f0.json  7f5ae3d4-4a14-4fa7-b602-6457e9fe089c.json  8f431c1c-a0ed-433c-b8d0-7d1e806ca8a8.json  b96ba674-44a5-45d0-a236-d40366fcb469.json  c8da4bf9-9a87-4651-a473-b8cbad9ebf71.json  c90d12e7-e88a-4509-b04b-1a1563ff0f57.json
app/output/21fbf6b7-bc1f-4ddd-864b-4daec6e206f0/: subtitles.srt
app/output/7f5ae3d4-4a14-4fa7-b602-6457e9fe089c/: subtitles.srt
app/output/8f431c1c-a0ed-433c-b8d0-7d1e806ca8a8/: subtitles.srt
app/output/c90d12e7-e88a-4509-b04b-1a1563ff0f57/: concat_list.txt  subtitles.srt
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/manhuarecap/: index.html  package.json
artifacts/manhuarecap/.replit-artifact/: artifact.toml
attached_assets/: Pasted-Backend-requirements-config-py-Load-and-save-settings-j_1775749786036.txt
static/: index.html
